--- a/index.html
+++ b/index.html
@@ -1,1 +1,348 @@
-ECHO is on.
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CDN CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <title>Hot Gadget</title>
+</head>
+
+<body>
+
+    <!-- header start -->
+
+    <header class="mb-5">
+        <section class="container">
+
+            <nav class="navbar navbar-expand-lg bg-light ">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="images/icon.png" alt="">
+                        <span class="ms-1 fw-bolder fs-3">Gadget</span>
+                    </a>
+
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item ms-3">
+                                <a class="nav-link" href="#smart-phone">Smart Phones</a>
+                            </li>
+                            <li class="nav-item ms-3">
+                                <a class="nav-link" href="#laptop">Laptops</a>
+                            </li>
+                            <li class="nav-item ms-3">
+                                <a class="nav-link" href="#watch">Watches</a>
+                            </li>
+                            <li class="nav-item ms-3">
+                                <a class="nav-link" href="#">Contact Us</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+            </nav>
+            <br><br>
+
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner ">
+                    <div class="carousel-item active">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-lg-7 ps-5">
+                                <h1 class="fw-bolder fs-1">MackBook Pro</h1>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptates nihil
+                                    numquam similique, est aliquid. Unde culpa architecto exercitationem repudiandae.
+                                </p>
+                                <h4>$5999</h4>
+                                <button type="button" class="btn btn-outline-warning">Buy Me</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-lg-7 ps-5">
+                                <h1 class="fw-bolder fs-1">Amazon Echo</h1>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptates nihil
+                                    numquam similique, est aliquid. Unde culpa architecto exercitationem repudiandae.
+                                </p>
+                                <h4>$799</h4>
+                                <p><button class="btn btn-outline-warning">Buy Me</button></p>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-products/product-2.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-lg-7 ps-5">
+                                <h1 class="fw-bolder fs-1">Sound System</h1>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptates nihil
+                                    numquam similique, est aliquid. Unde culpa architecto exercitationem repudiandae.
+                                </p>
+                                <h4>$499</h4>
+                                <button class="btn btn-outline-warning">Buy Me</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-products/product-3.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </header>
+    <br>
+
+    <!-- header end -->
+
+    <!-- Main Part Start -->
+
+    <main>
+
+        <!-- Smart Phone -->
+        <section class="container my-5">
+            <h1 class="text-center fw-bolder mb-4" id="smart-phone">Smart <span class="text-success">Phone</span></h1>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/phones/phone-1.png" class="card-img-top w-75 mx-auto pt-2 rounded-3" alt="...">
+                        <div class="card-body pb-0">
+                            <h5 class="card-title fw-bolder fs-3 text-center">IPhone 13 Pro</h5>
+                            <p class="card-text fw-700 text-center ">This is a longer card with supporting text below as
+                                a natural
+                                lead-in
+                                to additional content. This content is a little bit longer.
+
+                            </p>
+                            <br><br>
+                            <h4 class="text-center">$1299</h4>
+                            <p class="text-center mb-2"><button class="btn btn-outline-warning fw-bolder mx-auto">Buy
+                                    Me</button></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/phones/phone-2.png" class="card-img-top w-75 mx-auto pt-2 rounded-3" alt="...">
+                        <div class="card-body pb-0">
+                            <h5 class="card-title fw-bolder fs-3 text-center"> Samsung Galaxy</h5>
+                            <p class="card-text fw-700 text-center ">This is a longer card with supporting text below as
+                                a natural
+                                lead-in
+                                to additional content. This content is a little bit longer.
+
+                            </p>
+                            <br><br>
+                            <h4 class="text-center">$499</h4>
+                            <p class="text-center mb-2"><button class="btn btn-outline-warning fw-bolder mx-auto">Buy
+                                    Me</button></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/phones/phone-3.png" class="card-img-top w-75 mx-auto pt-2 rounded-3" alt="...">
+                        <div class="card-body pb-0">
+                            <h5 class="card-title fw-bolder fs-3 text-center">Redmi Note 9</h5>
+                            <p class="card-text fw-700 text-center ">This is a longer card with supporting text below as
+                                a natural
+                                lead-in
+                                to additional content. This content is a little bit longer.
+
+                            </p>
+                            <br><br>
+                            <h4 class="text-center">$399</h4>
+                            <p class="text-center mb-2"><button class="btn btn-outline-warning fw-bolder mx-auto">Buy
+                                    Me</button></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <br><br>
+
+        <!-- Laptops -->
+
+        <section class="container mt-5">
+            <h1 class="text-center fw-bolder mb-4" id="laptop">Laptop <span class="text-success">& MacBook</span></h1>
+            <br>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/laptops/laptop-1.png" class="card-img-top w-75 mx-auto pt-2 rounded-3"
+                            alt="...">
+                        <div class="card-body pb-0">
+                            <h5 class="card-title fw-bolder fs-3 text-center">Asus Laptop</h5>
+                            <p class="card-text fw-700 text-center ">This is a longer card with supporting text below as
+                                a natural
+                                lead-in
+                                to additional content. This content is a little bit longer.
+
+                            </p>
+                            <br><br>
+                            <h4 class="text-center">$1499</h4>
+                            <p class="text-center mb-2"><button class="btn btn-outline-warning fw-bolder mx-auto">Buy
+                                    Me</button></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/laptops/laptop-2.png" class="card-img-top w-75 mx-auto pt-2 rounded-3"
+                            alt="...">
+                        <div class="card-body pb-0">
+                            <h5 class="card-title fw-bolder fs-3 text-center"> MSI Gaming Laptop</h5>
+                            <p class="card-text fw-700 text-center ">This is a longer card with supporting text below as
+                                a natural
+                                lead-in
+                                to additional content. This content is a little bit longer.
+
+                            </p>
+                            <br><br>
+                            <h4 class="text-center">$2099</h4>
+                            <p class="text-center mb-2"><button class="btn btn-outline-warning fw-bolder mx-auto">Buy
+                                    Me</button></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/laptops/laptop-3.png" class="card-img-top w-75 mx-auto pt-2 rounded-3"
+                            alt="...">
+                        <div class="card-body pb-0">
+                            <h5 class="card-title fw-bolder fs-3 text-center">HP Pro-Book Laptop</h5>
+                            <p class="card-text fw-700 text-center ">This is a longer card with supporting text below as
+                                a natural
+                                lead-in
+                                to additional content. This content is a little bit longer.
+
+                            </p>
+                            <br><br>
+                            <h4 class="text-center">$1199</h4>
+                            <p class="text-center mb-2"><button class="btn btn-outline-warning fw-bolder mx-auto">Buy
+                                    Me</button></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <br><br>
+
+        <!-- Watchs -->
+
+        <section class="container mt-5">
+            <h1 class="text-center fw-bolder mb-4" id="watch">Smart <span class="text-success">Watches</span></h1>
+            <br>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/watch-3.jpg" class="card-img-top w-75 mx-auto pt-2 rounded-3" alt="...">
+                        <div class="card-body pb-0">
+                            <h5 class="card-title fw-bolder fs-3 text-center">Tissot </h5>
+                            <p class="card-text fw-700 text-center ">This is a longer card with supporting text below as
+                                a natural
+                                lead-in
+                                to additional content. This content is a little bit longer.
+
+                            </p>
+                            <br><br>
+                            <h4 class="text-center">$899</h4>
+                            <p class="text-center mb-2"><button class="btn btn-outline-warning fw-bolder mx-auto">Buy
+                                    Me</button></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/watch-3.jpg" class="card-img-top w-75 mx-auto pt-2 rounded-3" alt="...">
+                        <div class="card-body pb-0">
+                            <h5 class="card-title fw-bolder fs-3 text-center"> Naviforces</h5>
+                            <p class="card-text fw-700 text-center ">This is a longer card with supporting text below as
+                                a natural
+                                lead-in
+                                to additional content. This content is a little bit longer.
+
+                            </p>
+                            <br><br>
+                            <h4 class="text-center">$599</h4>
+                            <p class="text-center mb-2"><button class="btn btn-outline-warning fw-bolder mx-auto">Buy
+                                    Me</button></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow">
+                        <img src="images/watch-3.jpg" class="card-img-top w-75 mx-auto pt-2 rounded-3" alt="...">
+                        <div class="card-body pb-0">
+                            <h5 class="card-title fw-bolder fs-3 text-center">Fossil</h5>
+                            <p class="card-text fw-700 text-center ">This is a longer card with supporting text below as
+                                a natural
+                                lead-in
+                                to additional content. This content is a little bit longer.
+
+                            </p>
+                            <br><br>
+                            <h4 class="text-center">$999</h4>
+                            <p class="text-center mb-2"><button class="btn btn-outline-warning fw-bolder mx-auto">Buy
+                                    Me</button></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <br><br>
+
+    </main>
+
+
+
+
+    <!-- Main Part End -->
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
